--- a/popl09/Makefile
+++ b/popl09/Makefile
@@ -1,92 +1,3 @@
-# This file is part of Coccinelle, licensed under the terms of the GPL v2.
-# See copyright.txt in the Coccinelle source code for more information.
-# The Coccinelle source code can be obtained at http://coccinelle.lip6.fr
+MODULE=popl09
 
-#note: if you add a file (a .mli or .ml), dont forget to do a   make depend
-
-ifneq ($(MAKECMDGOALS),distclean)
-include ../Makefile.config
--include ../Makefile.local
-endif
-
-TARGET = popl
-
-OCAMLCFLAGS ?= -g
-OPTFLAGS ?= -g
-
-SRC = ast_popl.ml asttopopl.ml insert_quantifiers.ml \
-pretty_print_popl.ml flag_popl.ml popltoctl.ml popl.ml
-
-SYSLIBS=str.cma unix.cma
-LIBS=../commons/commons.cma ../globals/globals.cma
-
-INCLUDES = -I ../commons -I ../globals \
-	       -I ../ctl -I ../parsing_cocci -I ../parsing_c  -I ../engine
-
-#The Caml compilers.
-#for warning:  -w A
-#for profiling:  -p -inline 0   with OCAMLOPT
-OCAMLC_CMD=$(OCAMLC) $(OCAMLCFLAGS) $(INCLUDES)
-OCAMLOPT_CMD=$(OCAMLOPT) $(OPTFLAGS) $(INCLUDES)
-OCAMLDEP_CMD=$(OCAMLDEP) $(INCLUDES)
-OCAMLMKTOP_CMD=$(OCAMLMKTOP) -g -custom $(INCLUDES)
-
-LIB=$(TARGET).cma
-OPTLIB=$(LIB:.cma=.cmxa)
-
-OBJS = $(SRC:.ml=.cmo)
-OPTOBJS = $(SRC:.ml=.cmx)
-
-all: $(LIB)
-all.opt:
-	@$(MAKE) $(OPTLIB) BUILD_OPT=yes
-
-$(TARGET).top: $(LIB)
-	$(OCAMLMKTOP_CMD) -o $(TARGET).top $(SYSLIBS) $(LIBS) $(OBJS)
-
-$(LIB):  $(OBJS)
-	$(OCAMLC_CMD) -a -o $(LIB) $(OBJS)
-
-clean::
-	rm -f $(LIB) $(TARGET).top
-
-$(OPTLIB): $(OPTOBJS)
-	$(OCAMLOPT_CMD) -a -o $(OPTLIB) $(OPTOBJS)
-
-# clean rule for LIB.opt
-clean::
-	rm -f $(OPTLIB) $(LIB:.cma=.a)
-
-
-.SUFFIXES:
-.SUFFIXES: .ml .mli .cmo .cmi .cmx
-
-.ml.cmo:
-	$(OCAMLC_CMD) -c $<
-
-.mli.cmi:
-	$(OCAMLC_CMD) -c $<
-
-.ml.cmx:
-	$(OCAMLOPT_CMD) -c $<
-
-
-# clean rule for others files
-clean::
-	rm -f *.cm[iox] *.o *.annot
-	rm -f *~ .*~ #*#
-	rm -f .depend
-
-distclean: clean
-
-.PHONY: depend
-.depend depend:
-	$(OCAMLDEP_CMD) *.mli *.ml > .depend
-
-ifneq ($(MAKECMDGOALS),clean)
-ifneq ($(MAKECMDGOALS),distclean)
--include .depend
-endif
-endif
-
-include ../Makefile.common
+include ../Makefile.module
