final step for allowing references to metavariables from the current rule in script constraints
Such metavariables must be declared previously in the same rule.  They
must all occur within the same rule_elem as the constrained variable.
This rule_elem must contain no disjunctions, after disjunction lifting.

Script constraints may be executed more than once for a given metavariable
binding.  Executing the script constraint does not guarantee that the
complete match will work out; the constraints are executed within the
matching process.

--- a/parsing_cocci/Makefile
+++ b/parsing_cocci/Makefile
@@ -24,8 +24,8 @@ iso_compile.ml single_statement.ml simple_assignments.ml \
 get_metas.ml stmtlist.ml check_meta.ml top_level.ml \
 type_infer.ml test_exps.ml unitary_ast0.ml arity.ml index.ml context_neg.ml \
 adjust_pragmas.ml insert_plus.ml function_prototypes.ml \
-semantic_cocci.ml data.ml free_vars.ml safe_for_multi_decls.ml \
-parse_printf.ml parse_aux.ml disjdistr.ml \
+semantic_cocci.ml data.ml free_vars.ml re_constraints.ml \
+safe_for_multi_decls.ml parse_printf.ml parse_aux.ml disjdistr.ml \
 $(LEXER_SOURCES:.mll=.ml) $(PARSER_SOURCES:.mly=.ml) \
 $(CLI_LEXER_SOURCES:.mll=.ml) $(SCRIPT_LEXER_SOURCES:.mll=.ml) \
 cocci_grep.ml dpll.ml get_constants2.ml id_utils.ml git_grep.ml adjacency.ml \
