--- a/tools/spgen/source/Makefile
+++ b/tools/spgen/source/Makefile
@@ -1,15 +1,15 @@
-.PHONY: all
-all: spgen
+.PHONY : all
+all : spgen
 
-.PHONY: all.opt
-all.opt: spgen.opt
+.PHONY : all.opt
+all.opt : spgen.opt
 
-.PHONY: clean
-clean:
-	make -C../../.. clean-spgen
+.PHONY : clean
+clean :
+	$(MAKE) -C../../.. clean-spgen
 
-spgen:
-	make -C../../.. tools/spgen/source/spgen
+spgen :
+	$(MAKE) -C../../.. tools/spgen/source/spgen
 
-spgen.opt:
-	make -C../../.. tools/spgen/source/spgen.opt
+spgen.opt :
+	$(MAKE) -C../../.. tools/spgen/source/spgen.opt
