No doc in repo (generated file)

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ description-pak
 /bundles/pyml/pyml-current/pyml_arch.ml
 /bundles/stdcompat/stdcompat.ml
 /bundles/stdcompat/stdcompat.mli
+/bundles/stdcompat/doc/
