--- a/bundles/pyml/Makefile
+++ b/bundles/pyml/Makefile
@@ -5,22 +5,15 @@ PYML_VERSION=current
 
 PACKAGE_DIR=pyml-$(PYML_VERSION)
 TARBALL=
-MODULES=pyml_compat pyml_arch pytypes pywrappers py pycaml
-PRODUCTS=pyml_compat pyml_arch
+MODULES=pyml_arch pyutils pytypes pywrappers py pycaml
+PRODUCTS=pyml_arch
 OBJS=$(MODULES)
 INTERFACES=pywrappers py pycaml
 C_OBJS=pyml
 ARCHIVE=pyml
 LIBRARY=pyml
 SRC_DIR=$(PACKAGE_DIR)
-
-PYML_COMPAT=$(shell \
-	if [ "$(OCAMLVERSION)" "<" 4.03.0 ]; then \
-	  echo pyml_compat312.ml; \
-	else \
-	  echo pyml_compat403.ml; \
-	fi \
-)
+OCAMLFLAGS+=-I ../stdcompat
 
 ARCH:=$(shell uname)
 
@@ -51,9 +44,7 @@ $(SRC_DIR)/pyml_wrappers.inc: $(SRC_DIR)/pywrappers.ml
 
 $(SRC_DIR)/pyml_stubs.o: $(SRC_DIR)/pyml_stubs.c $(SRC_DIR)/pyml_wrappers.inc
 
-$(SRC_DIR)/pyml_compat.mli \
 $(SRC_DIR)/pyml_arch.mli \
-$(SRC_DIR)/$(PYML_COMPAT) \
 $(SRC_DIR)/$(PYML_ARCH) \
 $(SRC_DIR)/generate.ml \
 $(SRC_DIR)/pytypes.mli: $(MARKER)
@@ -62,26 +53,17 @@ $(SRC_DIR)/pywrappers.mli: \
 	$(SRC_DIR)/pywrappers.ml $(SRC_DIR)/pytypes.cmi $(SRC_DIR)/pyml_arch.cmi
 	$(OCAMLC_CMD) -i $< >$@
 
-$(SRC_DIR)/pyml_compat.cmx: $(SRC_DIR)/pyml_compat.ml $(SRC_DIR)/pyml_compat.cmi
-	$(OCAMLOPT_CMD) -c $< -o $@
-
-$(SRC_DIR)/pyml_compat.cmo: $(SRC_DIR)/pyml_compat.ml $(SRC_DIR)/pyml_compat.cmi
-	$(OCAMLC_CMD) -c $< -o $@
-
 $(SRC_DIR)/pyml_arch.cmx: $(SRC_DIR)/pyml_arch.ml $(SRC_DIR)/pyml_arch.cmi
 	$(OCAMLOPT_CMD) -c $< -o $@
 
 $(SRC_DIR)/pyml_arch.cmo: $(SRC_DIR)/pyml_arch.ml $(SRC_DIR)/pyml_arch.cmi
 	$(OCAMLC_CMD) -c $< -o $@
 
-$(SRC_DIR)/generate: $(SRC_DIR)/pyml_compat.cmx $(SRC_DIR)/generate.cmx
-	$(OCAMLOPT) $^ -o $@
+$(SRC_DIR)/generate: $(SRC_DIR)/generate.cmx
+	$(OCAMLOPT) $(OCAMLFLAGS) stdcompat.cmx $^ -o $@
 
-$(SRC_DIR)/generate.cmx: $(SRC_DIR)/generate.ml $(SRC_DIR)/pyml_compat.cmx
+$(SRC_DIR)/generate.cmx: $(SRC_DIR)/generate.ml
 	$(OCAMLOPT_CMD) -c $< -o $@
-
-$(SRC_DIR)/pyml_compat.ml: $(SRC_DIR)/$(PYML_COMPAT)
-	cp $< $@
 
 $(SRC_DIR)/pyml_arch.ml: $(SRC_DIR)/$(PYML_ARCH)
 	cp $< $@
