Remove the overriding of enable_opt
The option --disable-opt was ignored.
(Reported by Eugeniy Meshcheryakov, GitHub issue #130)

--- a/configure.ac
+++ b/configure.ac
@@ -451,7 +451,10 @@ AS_IF([test "x$OPTIMIZED_dynlink" = xno -a "x$enable_ocaml" = xyes],
 ])
 
 dnl  set the default enable-opt setting
-AC_SUBST([enable_opt], ["yes"])
+AS_IF([test -z "$enable_opt"],
+[dnl
+  AC_SUBST([enable_opt], ["yes"])
+])
 
 dnl  variables depending on whether we build the optimized spatch
 AS_IF([test "x$enable_opt" = xyes],
