Clean more files in pyml

--- a/bundles/pyml/Makefile
+++ b/bundles/pyml/Makefile
@@ -14,6 +14,11 @@ ARCHIVE=pyml
 LIBRARY=pyml
 SRC_DIR=$(PACKAGE_DIR)
 OCAMLFLAGS+=-I ../stdcompat
+CLEANOTHERS=pyml-current/generate pyml-current/generate.cmi \
+	pyml-current/generate.cmx pyml-current/generate.cmo \
+	pyml-current/generate.o pyml-current/pyml.a \
+	pyml-current/pyml.cma pyml-current/pyml.cmxa \
+	pyml-current/dllpyml_stubs.so
 
 ARCH:=$(shell uname)
 
