Forgot reexporting exception in Stdcompat

--- a/bundles/stdcompat/stdcompat-5/stdcompat__queue.mli.in
+++ b/bundles/stdcompat/stdcompat-5/stdcompat__queue.mli.in
@@ -77,3 +77,4 @@ val fold : ('a -> 'b -> 'a) -> 'a -> 'b t -> 'a
 val transfer : 'a t -> 'a t -> unit
 (** Alias for {!Queue.transfer} *)
 
+exception Empty = Queue.Empty
