--- a/bundles/menhirLib/Makefile
+++ b/bundles/menhirLib/Makefile
@@ -71,10 +71,10 @@ $(SRC_DIR)/Driver.ml: $(SRC_DIR)/yaccDriver.ml
 
 ifeq ($(OCAMLOPT_CMD),)
 $(SRC_DIR)/menhir: $(patsubst %,$(SRC_DIR)/%.cmo,$(MENHIR_MODULES))
-	$(OCAMLC_CMD) $(OCAMLLDFLAGS) stdcompat.cmo $^ -o $@
+	$(OCAMLC_CMD) $(OCAMLLDFLAGS) stdcompat.cma $^ -o $@
 else
 $(SRC_DIR)/menhir: $(patsubst %,$(SRC_DIR)/%.cmx,$(MENHIR_MODULES))
-	$(OCAMLOPT_CMD) $(OCAMLLDFLAGS) stdcompat.cmx $^ -o $@
+	$(OCAMLOPT_CMD) $(OCAMLLDFLAGS) stdcompat.cmxa $^ -o $@
 endif
 
 standard.mly: $(SRC_DIR)/standard.mly
