pyml bundle: use ocamlopt for compiling "generate" only for all.opt
Previously, "generate" was compiled with ocamlopt as soon as ocamlopt
was available. If TARGET_SPATCH=byte-only was used, then the compilation
failed since ocamlopt required "stdcompat.cmxa" for compiling
"generate", which was not available.

--- a/bundles/pyml/Makefile
+++ b/bundles/pyml/Makefile
@@ -34,14 +34,21 @@ endif
 
 include ../Makefile.bundles
 
-ifeq ($(OCAMLOPT_CMD),)
-	OCAMLCOPT := $(OCAMLC_CMD)
-	CMOX := cmo
-	CMAX := cma
+ifeq ($(MAKECMDGOALS),all.opt)
+	NATIVE := yes
 else
+	NATIVE := no
+endif
+
+
+ifeq ($(NATIVE),yes)
 	OCAMLCOPT := $(OCAMLOPT_CMD)
 	CMOX := cmx
 	CMAX := cmxa
+else
+	OCAMLCOPT := $(OCAMLC_CMD)
+	CMOX := cmo
+	CMAX := cma
 endif
 
 distclean: clean
