--- a/bundles/menhirLib/Makefile
+++ b/bundles/menhirLib/Makefile
@@ -22,7 +22,7 @@ MENHIR_MODULES= \
 	sentenceLexer segment sentenceParserAux interpret tableBackend MySet \
 	resizableArray LowIntegerPriorityQueue astar LRijkstra cmly_api \
 	cmly_format cmly_read cmly_write back menhir
-INTERFACES=syntax
+MERE_INTERFACES=syntax
 PRODUCTS=lexer lexdep lexmli parser sentenceLexer sentenceParser
 SIDEPRODUCTS=menhir menhirLib.cmi
 SIDEPRODUCTS_BYTECODE=menhirLib.cmo
