Do not cache source_files list

--- a/bundles/Makefile.bundles
+++ b/bundles/Makefile.bundles
@@ -73,7 +73,7 @@ clean:
 
 depend: .depend
 
-source_files := \
+source_files = \
 	$(wildcard \
 		$(patsubst %,$(SRC_DIR)/%.mli,$(MODULES) $(MERE_INTERFACES)) \
 	        $(patsubst %,$(SRC_DIR)/%.ml,$(MODULES))) \
